# Simple_Chat

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  chatform.cpp  chatform.h  loginform.cpp  loginform.h  main.cpp  mainwindow.cpp  mainwindow.h
ChatForm/: chatform.cpp  chatform.h  userchoice.cpp
ChatForm/ChatContent/: chatcontent.cpp  chatcontent.h  chatmessagemodel.cpp  chatmessagemodel.h  hoverlabel.cpp  hoverlabel.h  infopanelchat.cpp  infopanelchat.h  infopopup.cpp  infopopup.h  messageitemdelegate.cpp  messageitemdelegate.h  test_chatcontent.cpp
ChatForm/ChatContent/InputMessage/: inputmessage.cpp  inputmessage.h
ChatForm/ChatContent/MessageContainer/: messagecontainer.cpp  messagecontainer.h
ChatForm/SwitchChatContainer/: switchchatbutton.cpp  switchchatbutton.h  switchchatcontainer.cpp  switchchatcontainer.h
ChatForm/UserChoiceContainer/: userchoice.cpp  userchoice.h  userchoicemodel.cpp  userchoicemodel.h  useritemdelegate.cpp  useritemdelegate.h
LoginForm/: loginbutton.cpp  loginbutton.h  loginform.cpp  loginform.h
MainWindow/: mainwindow.cpp  mainwindow.h
server/: CMakeLists.txt
server/src/: main_server.cpp
src/: chatserver.cpp  chatserver.h  main.cpp
tests/: CMakeLists.txt  test_chatcontent.cpp  test_chatcontent.h
